--- a/style.css
+++ b/style.css
@@ -15,5 +15,13 @@ Use it to make something cool, have fun, and share what you've learned with othe
 
 */
 @import url("../twentytwelve/style.css");
+.entry-content h2 {
+  margin-left: 1em; }
+.entry-content h3 {
+  margin-left: 2em; }
+.entry-content h4, .entry-content h5, .entry-content h6 {
+  margin-left: 3em; }
+.entry-content p {
+  margin-left: 3em; }
 
 /*# sourceMappingURL=style.css.map */
