--- a/style.scss
+++ b/style.scss
@@ -15,3 +15,18 @@ Use it to make something cool, have fun, and share what you've learned with othe
 
 */
 @import url("../twentytwelve/style.css");
+
+.entry-content {
+    h2 {
+        margin-left: 1em;
+    }
+    h3 {
+        margin-left: 2em;
+    }
+    h4,h5,h6 {
+        margin-left: 3em;
+    }
+    p {
+        margin-left: 3em;
+    }
+}
