--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ Use it to make something cool, have fun, and share what you've learned with othe
   margin-left: 2em; }
 .entry-content h4, .entry-content h5, .entry-content h6 {
   margin-left: 3em; }
-.entry-content p {
+.entry-content p, .entry-content pre {
   margin-left: 3em; }
 
 /*# sourceMappingURL=style.css.map */
