--- a/style.scss
+++ b/style.scss
@@ -26,7 +26,7 @@ Use it to make something cool, have fun, and share what you've learned with othe
     h4,h5,h6 {
         margin-left: 3em;
     }
-    p {
+    p,pre {
         margin-left: 3em;
     }
 }
