--- a/style.scss
+++ b/style.scss
@@ -16,6 +16,10 @@ Use it to make something cool, have fun, and share what you've learned with othe
 */
 @import url("../twentytwelve/style.css");
 
+header#masthead {
+  position: relative;
+}
+
 .entry-content {
     h2 {
         margin-left: 1em;
