--- a/style.css
+++ b/style.css
@@ -15,6 +15,19 @@ Use it to make something cool, have fun, and share what you've learned with othe
 
 */
 @import url("../twentytwelve/style.css");
+/**
+ * Header
+ */
+.site-header {
+  position: relative; }
+  .site-header .header-widget {
+    position: absolute;
+    top: 0;
+    right: 0; }
+
+/**
+ * Main Content
+ */
 .entry-content h2 {
   margin-left: 1em; }
 .entry-content h3 {
