--- a/style.scss
+++ b/style.scss
@@ -19,7 +19,7 @@ Use it to make something cool, have fun, and share what you've learned with othe
 /**
  * Header
  */
-.site-header {
+header#masthead {
   position:relative;
 
   .header-widget {
