--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ header#masthead {
   margin-left: 2em; }
 .entry-content h4, .entry-content h5, .entry-content h6 {
   margin-left: 3em; }
-.entry-content p, .entry-content pre {
+.entry-content p {
   margin-left: 3em; }
 
 /*# sourceMappingURL=style.css.map */
