--- a/style.scss
+++ b/style.scss
@@ -17,6 +17,23 @@ Use it to make something cool, have fun, and share what you've learned with othe
 @import url("../twentytwelve/style.css");
 
 
+/**
+ * Header
+ */
+header#masthead {
+  position:relative;
+
+  .header-widget {
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding-top: 1.8rem;
+  }
+}
+
+/**
+ * Main Content
+ */
 .entry-content {
     h2 {
         margin-left: 1em;
