--- a/style.scss
+++ b/style.scss
@@ -74,3 +74,13 @@ article.no-results {
         margin-left: 3em;
     }
 }
+
+/**
+ * Article List
+ **/
+.site-content {
+  article {
+    border-bottom: 6px double #888;
+    padding-bottom: 3rem;
+  }
+}
