Add some box highlights to the article header info box.

--- a/style.css
+++ b/style.css
@@ -57,6 +57,11 @@ article.no-results {
 /**
  * Article List
  **/
+.site-content .archive-header {
+  margin-bottom: 48px;
+  border: solid 1px #F4F4F4;
+  background-color: #F4F4F4;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15), 0 0px 4px rgba(0, 0, 0, 0.2); }
 .site-content article {
   border-bottom: 6px double #888;
   padding-bottom: 3rem; }
