Need some padding.

--- a/style.scss
+++ b/style.scss
@@ -81,6 +81,7 @@ article.no-results {
 .site-content {
   .archive-header {
       margin-bottom: 48px;
+      padding: 1em;
       border: solid 1px #F4F4F4;
       background-color: #F4F4F4;
       box-shadow: 0 1px 1px rgba(0, 0, 0, 0.15), 0 0px 4px rgba(0, 0, 0, 0.2);
