--- a/style.scss
+++ b/style.scss
@@ -62,16 +62,32 @@ header#masthead {
   }
 }
 
-/**
- * No Results Article Area
- */
-article.no-results {
-  border-bottom: none;
-  margin-bottom: 1em;
 
-  #searchform {
-    margin-left: $indent_no_results;
-  }
+/**
+ * Site Content
+ **/
+.wrapper {
+    .site-content {
+
+        // Search Results
+        article {
+            padding: 1em;
+            border: solid 1px lightgray;
+            -webkit-box-shadow: 2px 3px 6px 0px rgba(0, 0, 0, 0.75);
+            -moz-box-shadow: 2px 3px 6px 0px rgba(0, 0, 0, 0.75);
+            box-shadow: 2px 3px 6px 0px rgba(0, 0, 0, 0.75);
+
+            // No Results Message
+            &.no-results {
+                border-bottom: none;
+                margin-bottom: 1em;
+
+                #searchform {
+                    margin-left: $indent_no_results;
+                }
+            }
+        }
+    }
 }
 
 /**
