--- a/style.scss
+++ b/style.scss
@@ -71,11 +71,16 @@ header#masthead {
 
         // Search Results
         article {
-            padding: 1em;
-            border: solid 1px lightgray;
-            -webkit-box-shadow: 2px 3px 6px 0px rgba(0, 0, 0, 0.75);
-            -moz-box-shadow: 2px 3px 6px 0px rgba(0, 0, 0, 0.75);
-            box-shadow: 2px 3px 6px 0px rgba(0, 0, 0, 0.75);
+
+
+            // Article List Formatting
+            &.list {
+                padding: 1em;
+                border: solid 1px lightgray;
+                -webkit-box-shadow: 2px 3px 6px 0px rgba(0, 0, 0, 0.75);
+                -moz-box-shadow: 2px 3px 6px 0px rgba(0, 0, 0, 0.75);
+                box-shadow: 2px 3px 6px 0px rgba(0, 0, 0, 0.75);
+            }
 
             // No Results Message
             &.no-results {
