--- a/style.scss
+++ b/style.scss
@@ -27,8 +27,12 @@ header#masthead {
   background-repeat: repeat-x;
 
   .main-navigation {
+    margin-left: -3em;
+    margin-right: -3em;
+
     .nav-menu {
       background-color: rgba(255,240,194,0.7);
+      padding-left: 2em;
 
       li {
         padding-left: 1em;
