--- a/style.css
+++ b/style.css
@@ -60,19 +60,19 @@ header#masthead {
 /**
  * Main Content
  */
-.entry-content h2 {
+#content .entry-content h2 {
   margin-left: 1em; }
-.entry-content h3 {
+#content .entry-content h3 {
   margin-left: 2em; }
-.entry-content h4, .entry-content h5, .entry-content h6 {
+#content .entry-content h4, #content .entry-content h5, #content .entry-content h6 {
   margin-left: 3em; }
-.entry-content p {
+#content .entry-content p {
   margin-left: 3em; }
-.entry-content IMG.product_link {
+#content .entry-content IMG.product_link {
   box-shadow: none; }
-.entry-content div.sharedaddy.sd-sharing-enabled {
+#content .entry-content div.sharedaddy.sd-sharing-enabled {
   padding-top: 4em; }
-.entry-content div.sharedaddy .sd-block {
+#content .entry-content div.sharedaddy .sd-block {
   border-top: solid 1px #F4F4F4; }
 
 /**
