Remove border (redo)

--- a/style.scss
+++ b/style.scss
@@ -128,7 +128,7 @@ header#masthead {
                 }
 
                 .sd-title {
-                    &&::before {
+                    ::before {
                         border: none;
                     }
                 }
