Need to add H3 to be more specific than default rule.

--- a/style.scss
+++ b/style.scss
@@ -127,9 +127,11 @@ header#masthead {
                     padding-top: 4em;
                 }
 
-                .sd-title {
-                    ::before {
-                        border: none;
+                h3 {
+                    &.sd-title {
+                        &::before {
+                            border: none;
+                        }
                     }
                 }
             }
