--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ header#masthead {
   box-shadow: none; }
 #content .entry-content div.sharedaddy.sd-sharing-enabled {
   padding-top: 4em; }
-#content .entry-content div.sharedaddy .sd-title ::before {
+#content .entry-content div.sharedaddy h3.sd-title::before {
   border: none; }
 
 /**
