--- a/style.scss
+++ b/style.scss
@@ -160,6 +160,14 @@ header#masthead {
 }
 
 /**
+ * Sidebar
+ */
+#secondary {
+    background-color: #F4F4F4;
+    padding: 1em;
+}
+
+/**
  * Article List
  **/
 .site-content {
