--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ Description: A Twenty Twelve child theme with tweaks for a documentation-centric
 Author: Store Locator Plus
 Author URI: https://www.storelocatorplus.com/
 Template: twentytwelve
-Version: 4.4.02
+Version: 4.6.1
 Text Domain:  	twentytwelve-docsite
 License:      	GNU General Public License v2 or later
 License URI:  	http://www.gnu.org/licenses/gpl-2.0.html
@@ -77,10 +77,19 @@ header#masthead {
 #content .entry-content div.sharedaddy h3.sd-title::before {
   border: none; }
 #content .entry-content div.jp-relatedposts {
-  padding-top: 4em;
+  padding: 4em 0;
   margin-left: 2em; }
   #content .entry-content div.jp-relatedposts h3.jp-relatedposts-headline em::before {
     border: none; }
+#content div.post_meta {
+  margin-top: 4em; }
+  #content div.post_meta .post_meta_boxes {
+    display: flex;
+    flex-direction: row;
+    align-items: stretch; }
+  #content div.post_meta .post_meta_box {
+    flex: 1 1 auto;
+    padding: 2em; }
 
 /**
  * Sidebar
