--- a/style.css
+++ b/style.css
@@ -60,6 +60,12 @@ header#masthead {
     margin-left: 3em; }
 
 /**
+ * Only for archive content
+ */
+body.archive .entry-content p {
+  margin-left: 3em; }
+
+/**
  * Main Content
  */
 #content .entry-content h2 {
@@ -67,8 +73,6 @@ header#masthead {
 #content .entry-content h3 {
   margin-left: 2em; }
 #content .entry-content h4, #content .entry-content h5, #content .entry-content h6 {
-  margin-left: 3em; }
-#content .entry-content p {
   margin-left: 3em; }
 #content .entry-content IMG.product_link {
   box-shadow: none; }
