--- a/style.css
+++ b/style.css
@@ -18,6 +18,13 @@ header#masthead {
   position: relative;
   background-clip: content-box;
   background-repeat: repeat-x; }
+  header#masthead img {
+    box-shadow: none;
+    border-radius: 0;
+    margin: 0;
+    padding: 0; }
+  header#masthead .header_image {
+    max-width: 33%; }
   header#masthead .main-navigation {
     margin: 0.25rem -3rem; }
     header#masthead .main-navigation .nav-menu {
@@ -133,5 +140,3 @@ body.archive .entry-content p {
   border: none;
   border-bottom: none;
   padding-bottom: 0; }
-
-/*# sourceMappingURL=style.css.map */
