--- a/style.scss
+++ b/style.scss
@@ -140,6 +140,21 @@ body.full-width {
                 }
             }
         }
+
+        // Side By Side Flex Boxes
+        .side-by-side {
+            display: flex;
+
+            .box {
+                padding: 1em;
+
+                .header {
+                    display: block;
+                    font-size: 1.5em;
+                }
+            }
+        }
+
     }
 }
 
