--- a/style.scss
+++ b/style.scss
@@ -144,6 +144,7 @@ body.full-width {
         // Side By Side Flex Boxes
         .side-by-side {
             display: flex;
+            justify-content: center;
 
             .box {
                 padding: 1em;
