--- a/style.scss
+++ b/style.scss
@@ -152,6 +152,7 @@ body.full-width {
                 .header {
                     display: block;
                     font-size: 1.5em;
+                    text-align: center;
                 }
             }
         }
