--- a/style.css
+++ b/style.css
@@ -90,6 +90,8 @@ body.page-template-full-width-side-by-side-noheader .site-content, body.page-tem
       display: block;
       font-size: 1.5em;
       text-align: center; }
+    .wrapper .site-content .side-by-side .box h2 {
+      margin-left: 0; }
 
 /**
  * Only for archive content
