--- a/style.scss
+++ b/style.scss
@@ -161,6 +161,10 @@ body {
                     font-size: 1.5em;
                     text-align: center;
                 }
+
+                h2 {
+                    margin-left: 0;
+                }
             }
         }
 
