--- a/style.scss
+++ b/style.scss
@@ -101,6 +101,7 @@ body {
             }
             .site-content {
                 margin: 0;
+                width: 100%;
             }
         }
     }
