--- a/style.scss
+++ b/style.scss
@@ -105,6 +105,12 @@ body {
             }
         }
     }
+
+    &.home {
+        .entry-title {
+            display: none;
+        }
+    }
 }
 
 /**
