Try some hover effects.

--- a/style.scss
+++ b/style.scss
@@ -245,6 +245,10 @@ body.archive {
     .side-by-side {
         display: flex;
         justify-content: center;
+        &:hover {
+            background-color: black;
+            opacity: 0.1;
+        }
 
         .box {
             padding: 1em;
