--- a/style.css
+++ b/style.css
@@ -125,6 +125,9 @@ body.archive .entry-content p {
 #content .side-by-side {
   display: flex;
   justify-content: center; }
+  #content .side-by-side:hover {
+    background-color: black;
+    opacity: 0.1; }
   #content .side-by-side .box {
     padding: 1em;
     flex: 1 1; }
