--- a/style.scss
+++ b/style.scss
@@ -242,13 +242,13 @@ body.archive {
             H4 {
                 &.meta_category {
                     font-family: 'dashicons';
-                    &:before {
+                    &::before {
                         content: "\f318";
                     }
                 }
                 &.meta_tag {
                     font-family: 'dashicons';
-                    &:before {
+                    &::before {
                         content: "\f323";
                     }
                 }
