Aling our dashicons on the post meta.

--- a/style.scss
+++ b/style.scss
@@ -245,6 +245,7 @@ body.archive {
                         font-family: 'dashicons';
                         content: "\f318";
                         padding-right: 0.5em;
+                        vertical-align: middle;
                     }
                 }
                 &.meta_tag {
@@ -252,6 +253,7 @@ body.archive {
                         font-family: 'dashicons';
                         content: "\f323";
                         padding-right: 0.5em;
+                        vertical-align: middle;
                     }
                 }
             }
