--- a/style.css
+++ b/style.css
@@ -125,11 +125,13 @@ body.archive .entry-content p {
     #content div.post_meta .post_meta_box H4.meta_category::before {
       font-family: 'dashicons';
       content: "\f318";
-      padding-right: 0.5em; }
+      padding-right: 0.5em;
+      vertical-align: middle; }
     #content div.post_meta .post_meta_box H4.meta_tag::before {
       font-family: 'dashicons';
       content: "\f323";
-      padding-right: 0.5em; }
+      padding-right: 0.5em;
+      vertical-align: middle; }
 #content .side-by-side {
   display: flex;
   justify-content: center; }
