--- a/style.css
+++ b/style.css
@@ -132,6 +132,11 @@ body.archive .entry-content p {
       content: "\f323";
       padding-right: 0.5em;
       vertical-align: middle; }
+    #content div.post_meta .post_meta_box H4.meta_details::before {
+      font-family: 'dashicons';
+      content: "\f214";
+      padding-right: 0.5em;
+      vertical-align: middle; }
 #content .side-by-side {
   display: flex;
   justify-content: center; }
