--- a/style.scss
+++ b/style.scss
@@ -256,6 +256,14 @@ body.archive {
                         vertical-align: middle;
                     }
                 }
+                &.meta_details {
+                    &::before {
+                        font-family: 'dashicons';
+                        content: "\f214";
+                        padding-right: 0.5em;
+                        vertical-align: middle;
+                    }
+                }
             }
         }
     }
