Fix the flex to 50%

--- a/style.css
+++ b/style.css
@@ -163,7 +163,7 @@ body.archive .entry-content p {
     flex-direction: row;
     flex-wrap: wrap; }
     #secondary ul.tlw-list li {
-      flex: 1 1 50; }
+      flex: 1 1 50%; }
 
 /**
  * Article List
