Add image no_box and no_shadow css class to drop shadows.

--- a/style.scss
+++ b/style.scss
@@ -185,7 +185,7 @@ body.archive {
         }
 
         IMG {
-            &.product_link {
+            &.product_link, &.no_shadow, &.no_box {
                 box-shadow: none;
             }
         }
