--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ header#masthead {
           color: #6666ff; }
   header#masthead .site-header-div {
     position: absolute;
-    top: 0;
+    top: 1.714285714rem;
     right: 0; }
     header#masthead .site-header-div h2 {
       text-align: right;
@@ -44,7 +44,6 @@ header#masthead {
       font-weight: 600; }
   header#masthead .header-widget {
     height: 5em;
-    padding-top: 1.8rem;
     overflow: hidden; }
     header#masthead .header-widget .nd-start-demo-form {
       display: flex; }
